     descriptors was extended to cover a newly reported case of nominal UPS
     power being incorrectly reported due to an unrealistically low maximum
     threshold, as seen with a EC850LCD device. [issue #2917, PR #2919]
   * Added APC BVKxxxM2 to list of devices where `lbrb_log_delay_sec=N` may be
     necessary to address spurious LOWBATT and REPLACEBATT events. [#2942]

 - `apc_modbus` driver updates:
   * The time stamp and inter-frame delay accounting was fixed, alleviating
     one of the problems reported in issue #2609. [PR #2982]

 - New NUT drivers:
   * Introduced a `ve-direct` driver for Victron Energy UPS/solar panels
     monitoring. Most specific reported values are in an `experimental.*`
     namespace, as a community we need to come up with standard naming for
     those via `docs/nut-names.txt`. [#440]
   * Introduced a `nutdrv_hashx` driver for numerous devices from Ablerex,
     Atlantis Land, Epyc, Infosec, ION, PowerWalker, Right Power Technology,
     Salicru, UPS Solutions and other vendors (originally shipped with a
     "PowerMaster+", "PowerMaster" or "PowerGuide" software companion suite).
     This seems to be a protocol developed by Cyber Energy for serial-port
     devices, subsequently used by different vendors in their own products
     or re-branded Cyber Energy creations. [#2940]
   * Introduced a `failover` driver for monitoring multiple UPS driver sockets
     and seamless switching out of UPS data in a failover situation, includes
     support for end-to-end tracked instant commands and also variable updating.
     [#2962]
   * Introduced USB (`powervar_cx_usb`) and Serial (`powervar_cx_ser`) drivers
     for Powervar CUSPP protocol, tested with GTS (USB) and UPM (USB, Serial)
     models. [#2988]

 - The `nut-driver-enumerator.sh` script (NDE) now internally tracks dependency
   of one driver on another one that should be locally running to serve the